# Stock_Market_Research_Analyst

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/stock_market_research_analyst/: crew.py  main.py
src/stock_market_research_analyst/config/: agents.yaml  tasks.yaml
src/stock_market_research_analyst/tools/: custom_tool.py
